--- a/style/styles.css
+++ b/style/styles.css
@@ -1,21 +1,25 @@
-html,
-body {
-    height: 100%;
-    width: 100%;
+* {
     margin: 0;
     padding: 0;
 }
 
-body {
-    display: flex;
-    justify-content: center;
+html,
+body,
+.fundo,
+.container,
+.homem_ferro {
+    height: 100%;
+    width: 100%;
 }
 
-.fundo {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
+.container {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.container_titulo {
+    display: flex;
+    justify-content: center;
 }
 
 .titulo {
@@ -32,12 +36,21 @@ body {
     0% {
         top: 0px
     }
+
     50% {
         top: 15px
     }
 
-    100%{
+    100% {
         top: 0px
     }
+
+}
+
+.homem_ferro {
+    position: absolute;
+    width: 20%;
+    height: 33%;
+    margin: 20px 0px 0px 20px;
 
 }
