add: animacao nos personagens, e adicção de mais um personagem

--- a/style/styles.css
+++ b/style/styles.css
@@ -34,23 +34,78 @@ body,
 
 @keyframes titulo_animado {
     0% {
-        top: 0px
+        top: 0px;
     }
 
     50% {
-        top: 15px
+        top: 15px;
     }
-
+    
     100% {
-        top: 0px
+        top: 0px;
     }
-
+    
 }
 
 .homem_ferro {
     position: absolute;
     width: 20%;
     height: 33%;
-    margin: 20px 0px 0px 20px;
+    margin: 20px 0px 0px 35px;
+    animation: homem_ferro 3s alternate;
+}
 
+@keyframes homem_ferro {
+    0% {
+        opacity: 0%;
+        top: 0px;
+        left: 0px;
+        width: 20%;
+        height: 33%;
+    }
+
+    50% {
+        opacity:50%;
+        top: 15px;
+        left: 15px;
+        width: 24%;
+        height: 37%;
+    }    
+
+    100% {
+        opacity: 100%;
+        top: 0px;
+        left: 0px;
+        width: 20%;
+        height: 33%;
+    }
+}
+
+.capitao_america {
+    position: absolute;
+    width: 15%;
+    align-self: flex-end;
+    margin: 0px 0px 20px 25px;
+    animation: capitao_america 2s alternate;
+}
+
+
+@keyframes capitao_america {
+    0% {
+        opacity: 0%;
+        align-self: flex-end;
+        width: 15%;
+    }
+    
+    50% {
+        opacity: 50%;
+        width: 18%;
+    }
+    
+    100% {
+        opacity: 100%;
+        align-self: flex-end;
+        width: 15%;    
+    }
+    
 }
