--- a/style/styles.css
+++ b/style/styles.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+body {
+    background-image: url(../assets/avengers-endgame-uhdpaper.com-8K-131.jpg);
+    background-size: cover;
+}
+
 html,
 body,
 .fundo,
@@ -40,72 +45,74 @@ body,
     50% {
         top: 15px;
     }
-    
+
     100% {
         top: 0px;
     }
-    
+
 }
+
+.container_personanagens {
+    display: flex;
+    justify-content: space-between;
+}
+
 
 .homem_ferro {
+    align-self: flex-end;
+    width: 19%;
+    height: 44%;
+    margin-right: 25px;
+    bottom: 0;
+    right: 0;
     position: absolute;
-    width: 20%;
-    height: 33%;
-    margin: 20px 0px 0px 35px;
-    animation: homem_ferro 3s alternate;
-}
-
-@keyframes homem_ferro {
-    0% {
-        opacity: 0%;
-        top: 0px;
-        left: 0px;
-        width: 20%;
-        height: 33%;
-    }
-
-    50% {
-        opacity:50%;
-        top: 15px;
-        left: 15px;
-        width: 24%;
-        height: 37%;
-    }    
-
-    100% {
-        opacity: 100%;
-        top: 0px;
-        left: 0px;
-        width: 20%;
-        height: 33%;
-    }
 }
 
 .capitao_america {
-    position: absolute;
     width: 15%;
     align-self: flex-end;
-    margin: 0px 0px 20px 25px;
-    animation: capitao_america 2s alternate;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+}
+
+.data_lancamento {
+    animation: titulo_animado 2s infinite;
+    animation-timing-function: ease-in-out;
+    align-self: flex-end;
+}
+
+.container_homem_aranha {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.homem_aranha {
+    margin-right: 50px;
+    margin-top: -45px;
+    width: 20%;
+    position: absolute;
+    align-self: flex-start;
+    animation: anim_homem_aranha 3.5s infinite;
+}
+
+.linha {
+    margin-top: -320px;
+    animation: linha 3.5s infinite;
 }
 
 
-@keyframes capitao_america {
+@keyframes anim_homem_aranha {
     0% {
-        opacity: 0%;
-        align-self: flex-end;
-        width: 15%;
+        margin-top: -25px;
     }
-    
+ 
     50% {
-        opacity: 50%;
-        width: 18%;
+        margin-top: 0px;
     }
-    
+
     100% {
-        opacity: 100%;
-        align-self: flex-end;
-        width: 15%;    
+        margin-top: -25px;
     }
-    
+
 }
