--- a/style/styles.css
+++ b/style/styles.css
@@ -6,113 +6,114 @@
 body {
     background-image: url(../assets/avengers-endgame-uhdpaper.com-8K-131.jpg);
     background-size: cover;
-}
-
-html,
-body,
-.fundo,
-.container,
-.homem_ferro {
-    height: 100%;
-    width: 100%;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: auto;
+    height: 100vh;
 }
 
 .container {
+    width: 100%;
+    height: 60%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
+
 }
 
-.container_titulo {
+.titulos {
+    width: 70%;
+    height: 40%;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .titulo {
-    position: absolute;
-    margin-top: 20px;
-    width: 30%;
-    height: 20%;
-    align-self: flex-start;
-    animation: titulo_animado 2s infinite;
-    animation-timing-function: ease-in-out;
-}
-
-@keyframes titulo_animado {
-    0% {
-        top: 0px;
-    }
-
-    50% {
-        top: 15px;
-    }
-
-    100% {
-        top: 0px;
-    }
-
-}
-
-.container_personanagens {
-    display: flex;
-    justify-content: space-between;
-}
-
-
-.homem_ferro {
-    align-self: flex-end;
-    width: 19%;
-    height: 44%;
-    margin-right: 25px;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-}
-
-.capitao_america {
-    width: 15%;
-    align-self: flex-end;
-    bottom: 0;
-    left: 0;
-    position: absolute;
+    max-width: 60%;
+    max-height: 60%;
 }
 
 .data_lancamento {
-    animation: titulo_animado 2s infinite;
-    animation-timing-function: ease-in-out;
+    align-self: center;
+    font-size: 50px;
+    color: white;
+    flex-basis: min-content;
+    -webkit-text-stroke-width: 2.5px;
+    /* largura da borda */
+    -webkit-text-stroke-color: #2E3C85;
+    font-weight: bold;
+    font-family: cursive;
+    text-shadow: black 0.1em 0.1em 0.2em;
+    animation:text-animation 2s infinite, animation-data 2s infinite;
+}
+@keyframes text-animation {
+    0% {
+        opacity: 100%;
+        color: orange;
+        -webkit-text-stroke-color: white;
+    }
+    
+    50% {
+        opacity: 0%;
+        color: red;
+        
+    }
+    
+    100% {
+        color: orange;
+        -webkit-text-stroke-color: white;
+    }
+}
+
+@keyframes animation-data {
+    0% {
+        opacity: 0%;
+        border-radius: 25px;
+    }
+    
+    50% {
+        opacity: 100%;
+        background-color: #DAA520;
+        border-radius: 25px;
+        border-radius: 25px;
+    }
+    
+    100% {
+        border-radius: 25px;
+        opacity: 0%;
+    }
+}
+
+.capitao_america {
+    max-width: 16%;
     align-self: flex-end;
 }
 
-.container_homem_aranha {
-    display: flex;
-    justify-content: flex-end;
+.homem_ferro {
+    width: 18%;
+    align-self: self-end;
+    margin-right: 45px;
 }
 
 .homem_aranha {
-    margin-right: 50px;
-    margin-top: -45px;
-    width: 20%;
     position: absolute;
-    align-self: flex-start;
-    animation: anim_homem_aranha 3.5s infinite;
-}
+    width: 20%;
+    right: 50px;
+    top: 0;
+    animation: anim_homem_aranha 3s infinite;
 
-.linha {
-    margin-top: -320px;
-    animation: linha 3.5s infinite;
 }
-
 
 @keyframes anim_homem_aranha {
     0% {
-        margin-top: -25px;
+        padding-top: 0px;
     }
- 
+
     50% {
-        margin-top: 0px;
+        margin-top: -23px;
     }
 
     100% {
-        margin-top: -25px;
+        margin-top: 0px;
     }
 
 }
