--- a/style/styles.css
+++ b/style/styles.css
@@ -12,7 +12,7 @@ body {
     height: 100vh;
 }
 
-.container {
+.container_rodape {
     width: 100%;
     height: 60%;
     display: flex;
@@ -20,7 +20,7 @@ body {
 
 }
 
-.titulos {
+.container_cabecalho {
     width: 70%;
     height: 40%;
     display: flex;
@@ -28,6 +28,7 @@ body {
 }
 
 .titulo {
+    margin-top: 25px;
     max-width: 60%;
     max-height: 60%;
 }
@@ -43,21 +44,22 @@ body {
     font-weight: bold;
     font-family: cursive;
     text-shadow: black 0.1em 0.1em 0.2em;
-    animation:text-animation 2s infinite, animation-data 2s infinite;
+    animation: text-animation 2s infinite, animation-data 2s infinite;
 }
+
 @keyframes text-animation {
     0% {
         opacity: 100%;
         color: orange;
         -webkit-text-stroke-color: white;
     }
-    
+
     50% {
         opacity: 0%;
         color: red;
-        
+
     }
-    
+
     100% {
         color: orange;
         -webkit-text-stroke-color: white;
@@ -69,14 +71,15 @@ body {
         opacity: 0%;
         border-radius: 25px;
     }
-    
+
     50% {
         opacity: 100%;
         background-color: #DAA520;
         border-radius: 25px;
         border-radius: 25px;
+        border: 1px solid red;
     }
-    
+
     100% {
         border-radius: 25px;
         opacity: 0%;
@@ -104,16 +107,16 @@ body {
 }
 
 @keyframes anim_homem_aranha {
-    0% {
-        padding-top: 0px;
+  
+    0%{
+        transform: scale(1) translate(-11%, 0%) rotate(0deg);
     }
-
-    50% {
-        margin-top: -23px;
+    50%{
+        transform: scale(1) translate(11%, 0%) rotate(-7deg);
     }
-
+    
     100% {
-        margin-top: 0px;
+        transform: scale(1) translate(-11%, 0%) rotate(0deg);
     }
 
 }
